--- a/src/index.css
+++ b/src/index.css
@@ -126,12 +126,34 @@ body {
     animation-delay: 200ms;
   }
 
+  .animation-delay-300 {
+    animation-delay: 300ms;
+  }
+
   .animation-delay-400 {
     animation-delay: 400ms;
   }
 
   .animation-delay-600 {
     animation-delay: 600ms;
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  /* Active navigation link */
+  .nav-link-active {
+    @apply text-primary-600 font-bold;
   }
 }
 
